--- a/Ansible Playbooks/git.yml
+++ b/Ansible Playbooks/git.yml
@@ -1,15 +1,19 @@
 ---
 - hosts: all
   become: yes
+  vars:
+    package_name: git
   tasks:
-    - name: git install
+    - name: git installation
       apt:
-        name: git
+        name: {{ package_name }}
         update-cache: yes
         state: present
+      when: ansible_facts['os_family'] == "CentOS"
     - name: tree install
       apt:
         name: tree
         update-cache: yes
         state: present
+      when: ansible_facts['os_family'] == "CentOS"
 ---
