--- a/Ansible Playbooks/git.yml
+++ b/Ansible Playbooks/git.yml
@@ -8,10 +8,10 @@
       yum:
         name: "{{ package_name }}"
         state: present
-      when: ansible_facts['os_family'] == "RedHat"
+      when: ansible_facts['os_family'] == "CentOS"
     - name: tree install
-      yum:
+      apt:
         name: tree
         state: present
-      when: ansible_facts['os_family'] == "CentOS"
+      when: ansible_facts['os_family'] == "Debian"
 
