--- a/Ansible Playbooks/apache.yaml
+++ b/Ansible Playbooks/apache.yaml
@@ -1,30 +1,30 @@
 ---
-hosts: webserver
-become: yes
-tasks:
-  - name: install apache2 in Debian
-    apt:
-      name: apache2
-      state: present
-    when:
-      - ansible_os_family == "Debian"
-  - name: install httpd in Redhat
-    yum: 
-      name: httpd
-      state: preset
-    when:
-      - ansible_os_family == "RedHat"
-  - name: start apache2 service in Debian
-    service:
-      name: apache2
-      enabled: yes
-      state: restarted
-    when:
-      - ansible_os_family == "Debian"
-  - name: start httpd service in RedHat
-    service:
-      name: httpd
-      enabled: yes
-      state: restarted
-    when:
+- hosts: webserver
+  become: yes
+  tasks:
+    - name: install apache2 in Debian
+      apt:
+        name: apache2
+        state: present
+      when:
+        - ansible_os_family == "Debian"
+    - name: install httpd in Redhat
+      yum: 
+        name: httpd
+        state: preset
+      when:
+        - ansible_os_family == "RedHat"
+    - name: start apache2 service in Debian
+      service:
+        name: apache2
+        enabled: yes
+        state: restarted
+      when:
+        - ansible_os_family == "Debian"
+    - name: start httpd service in RedHat
+      service:
+        name: httpd
+        enabled: yes
+        state: restarted
+      when:
       - ansible_os_family == "RedHat"
