--- a/Ansible Playbooks/lamp.yaml
+++ b/Ansible Playbooks/lamp.yaml
@@ -20,8 +20,6 @@
         name: "{{ item }}"
         state: present
       loop:
-      - php-fpm 
-      - php-mysqlnd 
-      - php-opcache 
-      - php-gd php-xml 
-      - php-mbstring
+      - php
+      - php-mysql
+      - php-pdo
