--- a/Ansible Playbooks/lamp.yaml
+++ b/Ansible Playbooks/lamp.yaml
@@ -5,21 +5,26 @@
     - name: fail for other  platforms
       fail:
         msg: This is not supported OS
-      when: - ansible_os_family != "RedHat"
+      when:
+        - ansible_os_family != "RedHat"
     - name: install httpd in Redhat
-      yum: 
+      yum:
         name: httpd
-        state: preset
-    - name: start httpd service in RedHat
-      service:
-        name: httpd
-        enabled: yes
-        state: restarted
+        state: present
+      notify:
+      - restart of httpd service
     - name: install php modules
-      yum: 
+      yum:
         name: "{{ item }}"
         state: present
       loop:
       - php
-      - php-mysql
       - php-pdo
+      notify:
+      - restart of httpd service
+  handlers:
+    - name: restart of httpd service
+      service:
+        name: httpd
+        enable: yes
+        state: restarted
