--- a/Ansible Playbooks/uninstall.yaml
+++ b/Ansible Playbooks/uninstall.yaml
@@ -6,5 +6,5 @@
       yum:
         name: git
         state: absent
-      when: ansible_facts['os_family'] == "CentOS" & "Debian"
+      when: ansible_facts['os_family'] == "CentOS" or "Debian"
     
