--- a/Ansible Playbooks/uninstall.yaml
+++ b/Ansible Playbooks/uninstall.yaml
@@ -5,7 +5,7 @@
     - name: uninstall git or tree
       yum:
         name: "{{ item }}"
-        state: absent
+        state: present
       loop:
       - git
       - tree
@@ -13,10 +13,8 @@
     - name: uninstall git or tree
       apt:
         name: "{{ item }}"
-        state: absent
+        state: present
       loop:
       - git
       - tree
       when: ansible_facts['os_family'] == "Debian"
-
-    
