--- a/Ansible Playbooks/filedemo.yaml
+++ b/Ansible Playbooks/filedemo.yaml
@@ -6,4 +6,9 @@
       file: 
         path: /home/ansible/readme.txt
         state: touch 
+    - name: create a simlink
+      file:
+       src: /home/ansible/readme.txt
+       dest: /home/
+       state: link
 
