--- a/Ansible Playbooks/filedemo.yaml
+++ b/Ansible Playbooks/filedemo.yaml
@@ -9,6 +9,6 @@
     - name: create a simlink
       file:
        src: /home/ansible/readme.txt
-       dest: /home/
+       dest: /home/ansible/readmecopy.txt
        state: link
 
