--- a/Ansible Playbooks/filedemo.yaml
+++ b/Ansible Playbooks/filedemo.yaml
@@ -15,5 +15,11 @@
       file:
        path: /home/ansible/testdr
        state: directory
+    - name: downloading a file
+      file:
+       url: https://war-jar-files.s3-us-west-2.amazonaws.com/gameoflife.war
+       dest: /home/ansible/ansible.war
+       
+
 
 
